# oop-lab2-network-simulator

./: CMakeLists.txt  Doxyfile  README.md  _add_node_command_8h_source.html  _connect_command_8h.html  _connect_command_8h.js  _connect_command_8h_source.html  _delete_node_command_8cpp.html  _delete_node_command_8h_source.html  _disconnect_command_8cpp.html  _disconnect_command_8h.html  _disconnect_command_8h.js  _firewall_decorator_8h.html  _firewall_decorator_8h.js  _history_manager_8h_source.html  _network_builder_8cpp.html  _network_builder_8h_source.html  _network_node_8h.js  _node_decorator_8h.html  _node_decorator_8h.js  _node_iterator_8h_source.html  _node_state_8h.html  _offline_state_8h.js  _online_state_8cpp.html  _online_state_8h.html  _online_state_8h.js  _report_facade_8h.html  _report_facade_8h.js  _routing_strategy_8h.html  _routing_strategy_8h_source.html  _server_node_8h.js  _server_node_8h_source.html  _shortest_path_strategy_8h.html  _shortest_path_strategy_8h.js  _shortest_path_strategy_8h_source.html  _simulation_command_8h.html  _simulation_command_8h.js  _simulation_command_8h_source.html  _simulation_manager_8cpp.html  _simulation_manager_8h.js  (+89 more)
docs/architecture/: architecture_description.md  class_diagram.puml
docs/doxygen/html/: _add_node_command_8cpp.html  _add_node_command_8h.html  _add_node_command_8h.js  _connect_command_8cpp.html  _dashboard_observer_8cpp.html  _dashboard_observer_8h.html  _dashboard_observer_8h.js  _dashboard_observer_8h_source.html  _delete_node_command_8h.html  _delete_node_command_8h.js  _disconnect_command_8h_source.html  _firewall_decorator_8cpp.html  _firewall_decorator_8h_source.html  _history_manager_8cpp.html  _history_manager_8h.html  _history_manager_8h.js  _network_builder_8h.html  (+125 more)
gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
include/: FirewallDecorator.h  MetricsCollector.h  NetworkBuilder.h  NetworkNode.h  NodeDecorator.h  NodeIterator.h  NodeState.h  OfflineState.h  PauseCommand.h  RandomPathStrategy.h  ServerNode.h  SimulationManager.h  StarTopology.h  StartCommand.h  Subnet.h  SubnetIterator.h  VisualNode.h
include/core/: HistoryManager.h  SimulationManager.h
include/network/: NetworkNode.h  ServerNode.h  Subnet.h
include/visual/: VisualEdge.h  VisualNode.h
search/: all_13.js  all_5.js  all_7.js  all_8.js  all_b.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_5.js  classes_7.js  classes_8.js  classes_a.js  classes_c.js  files_1.js  files_3.js  files_4.js  files_6.js  files_9.js  files_a.js  files_b.js  functions_1.js  functions_13.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_8.js  functions_b.js  functions_e.js  searchdata.js  variables_4.js
src/: MetricsCollector.cpp  NetworkBuilder.cpp  PauseCommand.cpp  ReportFacade.cpp  ServerNode.cpp  ShortestPathStrategy.cpp  SimulationManager.cpp  SimulationMemento.cpp  Subnet.cpp  main.cpp
src/core/: HistoryManager.cpp  SimulationManager.cpp
src/network/: ServerNode.cpp  Subnet.cpp
src/visual/: VisualEdge.cpp  VisualNode.cpp
tests/: test_advanced.cpp  test_behavioral.cpp  test_core_network.cpp  test_creational.cpp  test_edge_cases.cpp  test_structural.cpp
(+236 files in other folders)
